// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App test show list of categories 1`] = `
<Fragment>
  <h2>
    Gif-Expert-App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Hola"
      key="Hola"
    />
    <GifGrid
      category="GG"
      key="GG"
    />
  </ol>
</Fragment>
`;

exports[`App test snapshot 1`] = `
<Fragment>
  <h2>
    Gif-Expert-App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
